# ungood

./: .gitignore  ChangeLog.md  LICENSE  Lexer.hs  Main.hs  README.md  Syntax.hs  example.cm  example2.cm  example3.cm  stack.yaml  ungood.cabal
src/: Lexer.hs  Main.hs  Parser.hs  Syntax.hs
