name:                ungood
version:             0.1.0.0
synopsis:            C- compiler written for Translators class @OSU
-- description:         
homepage:            https://github.com/rutgerfarry/ungood
license:             MIT
license-file:        LICENSE
author:              Rutger Farry
maintainer:          rutgerfarry@gmail.com
category:            Compiler
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable ungood
  main-is:             Main.hs
  other-modules:
      Lexer
    , Parser
    , Syntax
  build-depends:       
      base             >= 4.9
    , haskeline        >= 0.7
    , parsec           >= 3.1
    , mtl              >= 2.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns
